added eda observations

--- a/SignalEDA.ipynb
+++ b/SignalEDA.ipynb
@@ -24,6 +24,27 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Data Description\n",
+    "Faults in electric transmission lines can lead to a destructive phenomenon called partial discharge. If left alone, partial discharges can damage equipment to the point that it stops functioning entirely. Your challenge is to detect partial discharges so that repairs can be made before any lasting harm occurs.\n",
+    "\n",
+    "Each signal contains 800,000 measurements of a power line's voltage, taken over 20 milliseconds. As the underlying electric grid operates at 50 Hz, this means each signal covers a single complete grid cycle. The grid itself operates on a 3-phase power scheme, and all three phases are measured simultaneously.\n",
+    "\n",
+    "## File Descriptions\n",
+    "* metadata_[train/test].csv\n",
+    "\n",
+    "    * id_measurement: the ID code for a trio of signals recorded at the same time.\n",
+    "    * signal_id: the foreign key for the signal data. Each signal ID is unique across both train and test, so the first ID in train is '0' but the first ID in test is '8712'.\n",
+    "    * phase: the phase ID code within the signal trio. The phases may or may not all be impacted by a fault on the line.\n",
+    "    * target: 0 if the power line is undamaged, 1 if there is a fault.\n",
+    "* [train/test].parquet - The signal data. Each column contains one signal; 800,000 int8 measurements as exported with pyarrow.parquet version 0.11. Please note that this is different than our usual data orientation of one row per observation; the switch makes it possible loading a subset of the signals efficiently. If you haven't worked with Apache Parquet before, please refer to either the Python data loading starter kernel.\n",
+    "\n",
+    "* sample_submission.csv: a valid sample submission."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
@@ -403,21 +424,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## metadata\\_[train/test].csv\n",
-    "\n",
-    "id_measurement: the ID code for a trio of signals recorded at the same time.\n",
-    "\n",
-    "signal_id: the foreign key for the signal data.\n",
-    "\n",
-    "phase: the phase ID code within the signal trio. The phases may or may not all be impacted by a fault on the line.\n",
-    "\n",
-    "target: 0 if the power line is undamaged, 1 if there is a fault. (only train) ## Overview\n"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
@@ -731,6 +737,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "From the above plot, we can observe that we have less damaged signal data then undamaged signal data"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
@@ -759,6 +772,13 @@
    "source": [
     "fig=figure(facecolor='white')\n",
     "sns.countplot(x=\"target\", data=train_csv, hue=\"phase\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "It can be observed that we have full data of al the 3 phases for each signal"
    ]
   },
   {
@@ -1417,13 +1437,20 @@
     }
    ],
    "source": [
-    "fig, axes = plt.subplots(3, 3, figsize=(20, 12), sharex=True, sharey=True, facecolor = \"white\")\n",
-    "fig.suptitle(\"Undamaged examples\", size=18)\n",
+    "fig, axes = plt.subplots(3, 3, figsize = (20, 12), sharex = True, sharey = True, facecolor = \"white\")\n",
+    "fig.suptitle(\"Undamaged examples\", size = 18)\n",
     "for x, index in enumerate(neg_index):\n",
     "    for phase in range(3):\n",
-    "        sns.lineplot(x=train_data.columns, y=train_data.iloc[index+phase, :], ax=axes[x//3, x%3])\n",
+    "        sns.lineplot(x = train_data.columns, y = t rain_data.iloc[index+phase, :], ax = axes[x//3, x%3])\n",
     "    axes[x//3, x%3].patch.set_facecolor('blue')\n",
     "    axes[x//3, x%3].patch.set_alpha(0.2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "From the above plot of the undamaged signals, we can observe that there is some noise in our signal data which can severely affect the performance of our model, so we need to apply some signal filtering preprocessing to remove the noise. "
    ]
   },
   {
@@ -1443,17 +1470,17 @@
     }
    ],
    "source": [
-    "fig, (ax1, ax2) = plt.subplots(1, 2, figsize=(20, 5), sharey=True, facecolor=\"white\")\n",
+    "fig, (ax1, ax2) = plt.subplots(1, 2, figsize = (20, 5), sharey = True, facecolor = \"white\")\n",
     "for i in range(3):\n",
-    "    sns.lineplot(x=train_data.columns, y=train_data.iloc[i, :], ax=ax1, label=[\"phase:\"+str(train_csv.iloc[i, :].phase)])\n",
-    "ax1.set_xlabel(\"example of undamaged signal\", fontsize=18)\n",
-    "ax1.set_ylabel(\"amp\", fontsize=18)\n",
+    "    sns.lineplot(x = train_data.columns, y = train_data.iloc[i, :], ax = ax1, label = [\"phase:\"+str(train_csv.iloc[i, :].phase)])\n",
+    "ax1.set_xlabel(\"example of undamaged signal\", fontsize = 18)\n",
+    "ax1.set_ylabel(\"amp\", fontsize = 18)\n",
     "ax1.patch.set_facecolor('blue')\n",
     "ax1.patch.set_alpha(0.2)\n",
     "for i in range(3, 6):\n",
-    "    sns.lineplot(x=train_data.columns, y=train_data.iloc[i, :], ax=ax2, label=[\"phase:\"+str(train_csv.iloc[i, :].phase)])\n",
-    "ax2.set_xlabel(\"example of damaged signal\", fontsize=18)\n",
-    "ax2.set_ylabel(\"amp\", fontsize=18)\n",
+    "    sns.lineplot(x = train_data.columns, y = train_data.iloc[i, :], ax = ax2, label = [\"phase:\"+str(train_csv.iloc[i, :].phase)])\n",
+    "ax2.set_xlabel(\"example of damaged signal\", fontsize = 18)\n",
+    "ax2.set_ylabel(\"amp\", fontsize = 18)\n",
     "ax2.patch.set_facecolor('red')\n",
     "ax2.patch.set_alpha(0.2)"
    ]
@@ -1475,13 +1502,20 @@
     }
    ],
    "source": [
-    "fig, axes = plt.subplots(3, 3, figsize=(20, 12), sharex=True, sharey=True, facecolor=\"white\")\n",
-    "fig.suptitle(\"Damaged examples\", size=18)\n",
+    "fig, axes = plt.subplots(3, 3, figsize = (20, 12), sharex = True, sharey = True, facecolor = \"white\")\n",
+    "fig.suptitle(\"Damaged examples\", size = 18)\n",
     "for x, index in enumerate(pos_index):\n",
     "    for phase in range(3):\n",
-    "        sns.lineplot(x=train_data.columns, y=train_data.iloc[index+phase, :], ax=axes[x//3, x%3])\n",
+    "        sns.lineplot(x = train_data.columns, y = train_data.iloc[index+phase, :], ax = axes[x//3, x%3])\n",
     "        axes[x//3, x%3].patch.set_facecolor('red')\n",
     "        axes[x//3, x%3].patch.set_alpha(0.2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "By comparing our plot of undamaged signals with damaged signals, we can clearly observe the difference in their pattern, damaged signals achieve higher amplitudes constantly, indicating the presence of partial discharge at that point."
    ]
   }
  ],
